# ready-made-actives

./: Dockerfile  app.py  compose_output.txt  database.db  docker-compose.yml  docker_output.txt  pyproject.toml
