[project]
name = "charlas"
version = "0.1.0"
description = "Charlas - exemplo de API em FastAPI com JWT"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "python-jose[cryptography]",
    "passlib[argon2]>=1.7.4",
    "faker",
    "python-multipart"
]

[tool.pdm.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 8000 --reload"
